--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
- ::-webkit-scrollbar {
+            html{
+                scroll-behavior: smooth;
+            }
+
+            ::-webkit-scrollbar {
               width: 17px;
             }
 
